<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingBottom="2dp"
                android:paddingRight="2dp"
                android:paddingTop="4dp">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/TextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/city"
                        android:textSize="14sp"></TextView>

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:textSize="14sp">
                        android:inputType="text"
                        android:text="" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/TextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/lat"
                        android:textSize="14sp"></TextView>

                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        android:maxEms="6"
                        android:text=""
                        android:textSize="14sp"></EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/TextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/lng"
                        android:textSize="14sp"></TextView>

                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        android:textSize="14sp"></EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/TextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/altitude"
                        android:textSize="14sp"></TextView>

                    <EditText
                        android:id="@+id/altitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="number"></EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="4dp"
                        android:text="@string/timezone"
                        android:textSize="14sp"></TextView>

                    <CheckBox
                        android:id="@+id/chLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/local"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="UTC +/-"
                        android:textSize="14sp" />

                    <de.gdoeppert.sky.gui.NumPicker
                        android:id="@+id/tzPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:visibility="visible" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/locate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/locatehere"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/lookup"
                    android:layout_width="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lookupcity"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/locCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/android:cancel"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/locDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/delete"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/locOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/android:ok"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>